--- a/asivamosffie.web/asivamosffie/src/assets/scss/_general.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_general.scss
@@ -219,8 +219,13 @@ strong {
   margin-right: 0.5em !important;
 }
 
-.ml-05 {
+.ml-05,
+.ml-05em {
   margin-left: 0.5em !important;
+}
+
+.ml-08em {
+  margin-left: 0.8em !important;
 }
 
 .ml-1em {
