--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/ver-detalle-tabla-procesos/ver-detalle-tabla-procesos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/ver-detalle-tabla-procesos/ver-detalle-tabla-procesos.component.html
@@ -7,7 +7,7 @@
   </h1>
 </div>
 <div class="d-flex justify-content-center mt-2em">
-  <span class="mr-2em">{{ data.fechaCreacion | date:'dd/MM/yyyy' }}</span>
+  <span class="mr-2em">{{ data.fechaCreacion }}</span>
   <span class="mr-2em">{{ data.tipoProcesoNombre }}</span>
   <span class="mr-2em">{{ data.etapaProcesoSeleccionNombre }}</span>
   <span class="mr-2em info-text"
