--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
@@ -148,6 +148,7 @@
 
       <app-tabla-form-solicitud-multiple
         #solicitudMultiple
+        [estaEditando]="estaEditando"
         [sesionComiteSolicitud]="sesionComiteSolicitud"
         [style.display]="getMostrarProyectos()"
         [Estadosolicitud]="getObservableEstadoSolicitud()"
