--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
@@ -79,10 +79,7 @@
               [matTooltipPosition]="'above'"
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
-              *ngIf="
-                (!element.proyecto.estadoProyectoObraCodigo && estaEditando) ||
-                (element.proyecto.estadoProyectoInterventoriaCodigo && estaEditando)
-              "
+              *ngIf="!element.proyecto.estadoProyectoInterventoriaCodigo && estaEditando"
             />
           </span>
         </div>
