--- a/asivamosffie.web/asivamosffie/src/assets/scss/_quill-editor.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_quill-editor.scss
@@ -145,6 +145,9 @@
         top: calc(50% + 0.5em);
       }
     }
+    &.sin-required::after {
+      content: none;
+    }
   }
 
   .ql-editor::before {
