--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/tabla-cronograma/tabla-cronograma.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/tabla-cronograma/tabla-cronograma.component.html
@@ -48,7 +48,7 @@
               </div>
               <div class="w-500">
                 <quill-editor
-                  class="quill-editor-style quill-dentro-de-la-tabla"
+                  class="quill-editor-style quill-dentro-de-la-tabla sin-required"
                   [styles]="editorStyle"
                   [modules]="config"
                   (onContentChanged)="maxLength($event, 500)"
@@ -77,7 +77,13 @@
                   <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
                 </button>
                 <span class="required-calendar">*</span>
-                <span class="icon-incompleto">
+                <span
+                  class="icon-incompleto"
+                  *ngIf="
+                    (addressForm.controls[i].get('fecha').invalid && addressForm.controls[i].get('fecha').touched) ||
+                    (addressForm.controls[i].get('fecha').invalid && editMode.valor)
+                  "
+                >
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
@@ -85,10 +91,6 @@
                     [matTooltipPosition]="'above'"
                     matTooltip="Debe ingresar la información en el campo para continuar"
                     matTooltipClass="info-tooltip"
-                    *ngIf="
-                      (addressForm.controls[i].get('fecha').invalid && addressForm.controls[i].get('fecha').touched) ||
-                      (addressForm.controls[i].get('fecha').invalid && editMode.valor)
-                    "
                   />
                 </span>
               </div>
@@ -276,20 +278,16 @@
             Ver detalle
           </button>
 
-          
-
           <button
             mat-raised-button
             color="accent"
             class="btn-table"
             (click)="openDialogDevolucion(element)"
             *ngIf="
-            
               element.id.estadoActividadCodigo == estadosProcesoSeleccionMonitoreo.DevueltoPorComiteFiduciario ||
               element.id.estadoActividadCodigo == estadosProcesoSeleccionMonitoreo.DevueltoPorComiteTecnico ||
               element.id.estadoActividadCodigo == estadosProcesoSeleccionMonitoreo.RechazadoPorComiteTecnico ||
-              element.id.estadoActividadCodigo == estadosProcesoSeleccionMonitoreo.RechazadoPorComiteFiduciario 
-          
+              element.id.estadoActividadCodigo == estadosProcesoSeleccionMonitoreo.RechazadoPorComiteFiduciario
             "
           >
             Motivos de la devolución
