--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
@@ -154,6 +154,7 @@
         [Estadosolicitud]="getObservableEstadoSolicitud()"
         [EstadosolicitudActa]="EstadosolicitudActa"
         (ActualizarProyectos)="ActualizarProyectos($event)"
+        [listaEstadosSolicitud]="estadosArray"
       >
       </app-tabla-form-solicitud-multiple>
 
