ajustes comité fiduciario

--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-solicitud/form-solicitud.component.html
@@ -150,6 +150,7 @@
         [Estadosolicitud]="getObservableEstadoSolicitud()"
         [EstadosolicitudActa]="EstadosolicitudActa"
         (ActualizarProyectos)="ActualizarProyectos($event)"
+        [listaEstadosSolicitud]="estadosArray"
       >
       </app-tabla-form-solicitud-multiple>
 
