--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
@@ -38,49 +38,37 @@
     <ng-container matColumnDef="estado">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado del proyecto</th>
       <td mat-cell *matCellDef="let element">
+        
         <div class="d-flex">
-          <mat-form-field
-            class="select-width"
+          <!-- obra -->
+          <mat-form-field class="select-width"
             [class.mat-form-field-invalid]="!element.proyecto.estadoProyectoObraCodigo && estaEditando"
-            *ngIf="contratacion.tipoSolicitudCodigo === '1'"
-          >
-            <!-- obra -->
-            <mat-select
-              required
-              [(ngModel)]="element.proyecto.estadoProyectoObraCodigo"
-              (selectionChange)="onChangeEstado()"
-            >
+            *ngIf="contratacion.tipoSolicitudCodigo === '1'">
+            <mat-select required [(ngModel)]="element.proyecto.estadoProyectoObraCodigo"
+              (selectionChange)="onChangeEstado()">
               <mat-option *ngFor="let estado of listaEstados" [value]="estado.codigo">
                 {{ estado.nombre }}
               </mat-option>
             </mat-select>
           </mat-form-field>
-          <mat-form-field
-            class="select-width"
+
+          <!-- interventoria -->
+          <mat-form-field class="select-width"
             [class.mat-form-field-invalid]="!element.proyecto.estadoProyectoInterventoriaCodigo && estaEditando"
-            *ngIf="contratacion.tipoSolicitudCodigo === '2'"
-          >
-            <!-- interventoria -->
-            <mat-select
-              required
-              [(ngModel)]="element.proyecto.estadoProyectoInterventoriaCodigo"
-              (selectionChange)="onChangeEstado()"
-            >
+            *ngIf="contratacion.tipoSolicitudCodigo === '2'">
+            <mat-select required [(ngModel)]="element.proyecto.estadoProyectoInterventoriaCodigo"
+              (selectionChange)="onChangeEstado()">
               <mat-option *ngFor="let estado of listaEstados" [value]="estado.codigo">
                 {{ estado.nombre }}
               </mat-option>
             </mat-select>
           </mat-form-field>
+
           <span class="icon-incompleto">
-            <img
-              class="icon-incompleto--img"
-              src="assets/img/icon/incompleto.svg"
-              alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
+            <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+              [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
-              *ngIf="!element.proyecto.estadoProyectoInterventoriaCodigo && estaEditando"
-            />
+              *ngIf="!element.proyecto.estadoProyectoInterventoriaCodigo && estaEditando" />
           </span>
         </div>
       </td>
@@ -89,10 +77,7 @@
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
-        <button
-          mat-raised-button
-          type="button"
-          (click)="
+        <button mat-raised-button type="button" (click)="
             Observaciones(
               element.contratacionProyectoId,
               element.contratacionId,
@@ -101,22 +86,14 @@
               element.proyecto.estadoProyectoObraCodigo,
               0
             )
-          "
-          *ngIf="contratacion.tipoSolicitudCodigo === '1'"
-          mat-raised-button
-          color="accent"
-          class="btn-table"
+          " *ngIf="contratacion.tipoSolicitudCodigo === '1'" mat-raised-button color="accent" class="btn-table"
           [disabled]="
             element.proyecto.estadoProyectoObraCodigo == null ||
             element.proyecto.estadoProyectoObraCodigo == estadosProyecto.AprobadoComiteTecnico
-          "
-        >
+          ">
           Observaciones
         </button>
-        <button
-          mat-raised-button
-          type="button"
-          (click)="
+        <button mat-raised-button type="button" (click)="
             Observaciones(
               element.contratacionProyectoId,
               element.contratacionId,
@@ -125,16 +102,11 @@
               0,
               element.proyecto.estadoProyectoInterventoriaCodigo
             )
-          "
-          *ngIf="contratacion.tipoSolicitudCodigo === '2'"
-          mat-raised-button
-          color="accent"
-          class="btn-table"
+          " *ngIf="contratacion.tipoSolicitudCodigo === '2'" mat-raised-button color="accent" class="btn-table"
           [disabled]="
             element.proyecto.estadoProyectoInterventoriaCodigo == null ||
             element.proyecto.estadoProyectoInterventoriaCodigo == estadosProyecto.AprobadoComiteTecnico
-          "
-        >
+          ">
           Observaciones
         </button>
       </td>
