--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-seleccion-proponente-a-invitar/form-seleccion-proponente-a-invitar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-seleccion-proponente-a-invitar/form-seleccion-proponente-a-invitar.component.html
@@ -80,9 +80,14 @@
                   {{ proponente.nombreProponente }}
                 </td>
                 <td class="mat-cell cdk-cell ng-star-inserted">
-                  <section class="table-checkbox">
+
+                  <section
+                    class="table-checkbox"
+                    [class.invalid]="!checkbox.value"
+                  >
                     <mat-checkbox
                       type="checkbox"
+                      #checkbox
                       [checked]="validateSel(proponente.nombreProponente)"
                       (change)="changeSeleccion($event, proponente)"
                       [id]="proponente.procesoSeleccionProponenteId"
