--- a/asivamosffie.web/asivamosffie/src/assets/scss/_form.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_form.scss
@@ -233,7 +233,7 @@ div.mat-select-arrow {
     .mat-checkbox-background,
     .mat-checkbox-frame {
       border-radius: 50%;
-      border: var(--mainColor) 1.5px solid;
+      border: $mainColor 1.5px solid;
     }
     .mat-checkbox-checked.mat-accent .mat-checkbox-background {
       box-shadow: 0 0 0 1px #fff, 0 0 0 2px $mainColor;
@@ -241,6 +241,12 @@ div.mat-select-arrow {
 
     .mat-checkbox-checked .mat-checkbox-checkmark {
       display: none;
+    }
+  }
+
+  &.invalid {
+    .mat-checkbox-frame {
+      border-color: $secondaryColor;
     }
   }
 }
