--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/hojas-vida-verificar-requisitos/hojas-vida-verificar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/hojas-vida-verificar-requisitos/hojas-vida-verificar-requisitos.component.html
@@ -92,7 +92,12 @@
         </quill-editor>
       </div>
       <span class="contador miles" *ngIf="addressForm.get('observaciones').value !== null">
-        {{ 1000 - textoLimpio(addressForm.get('observaciones').value) }}
+        {{
+          1000 -
+            (textoLimpio(addressForm.get('observaciones').value) > 1000
+              ? 1000
+              : textoLimpio(addressForm.get('observaciones').value))
+        }}
       </span>
       <span class="contador miles" *ngIf="addressForm.get('observaciones').value === null"> 1000 </span>
       <span class="icon-incompleto">
