--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
@@ -65,10 +65,20 @@
           </mat-form-field>
 
           <span class="icon-incompleto">
-            <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
-              [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+            <img
+              class="icon-incompleto--img"
+              src="assets/img/icon/incompleto.svg"
+              alt="este campo es requerido"
+              [matTooltipPosition]="'above'"
+              matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
-              *ngIf="!element.proyecto.estadoProyectoInterventoriaCodigo && estaEditando" />
+              *ngIf="
+                (!element.proyecto.estadoProyectoObraCodigo && estaEditando) ||
+                (element.proyecto.estadoProyectoObraCodigo == 0 && estaEditando) ||
+                (!element.proyecto.estadoProyectoInterventoriaCodigo && estaEditando) ||
+                (element.proyecto.estadoProyectoInterventoriaCodigo == 0 && estaEditando)
+              "
+            />
           </span>
         </div>
       </td>
