--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/accord-vigencias-valor/accord-vigencias-valor.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/accord-vigencias-valor/accord-vigencias-valor.component.html
@@ -17,17 +17,17 @@
                     </mat-card-header>
                     <mat-card-content>
                         <div class="mt-2em" *ngIf="seguro.get( 'tieneSeguro' ).value === true">
-                            <p><b>Vigencia de la póliza: </b><em> {{ contratoPoliza.vigencia | date: 'dd/MM/yyyy' }} </em></p>
+                            <p><b>Vigencia de la póliza: </b><em> {{ seguro.get( 'seguroPoliza' ).value.vigencia | date: 'dd/MM/yyyy' }} </em></p>
                             <p><b>Vigencia actualizada de la póliza: </b><em> {{ seguro.get( 'fechaSeguro' ).value | date: 'dd/MM/yyyy' }} </em></p>
                         </div>
 
                         <div class="mt-2em" *ngIf="seguro.get( 'tieneFechaAmparo' ).value === true">
-                            <p><b>Vigencia del amparo: </b><em> {{ contratoPoliza.vigenciaAmparo | date: 'dd/MM/yyyy' }} </em></p>
+                            <p><b>Vigencia del amparo: </b><em> {{ seguro.get( 'seguroPoliza' ).value.vigenciaAmparo | date: 'dd/MM/yyyy' }} </em></p>
                             <p><b>Vigencia actualizada del amparo: </b><em> {{ seguro.get( 'fechaAmparo' ).value | date: 'dd/MM/yyyy' }} </em></p>
                         </div>
 
                         <div class="mt-2em" *ngIf="seguro.get( 'tieneValorAmparo' ).value === true">
-                            <p><b>Valor del amparo: </b><em> {{ contratoPoliza.valorAmparo | currency:'':'symbol-narrow':'.0-0' }} </em></p>
+                            <p><b>Valor del amparo: </b><em> {{ seguro.get( 'seguroPoliza' ).value.valorAmparo | currency:'':'symbol-narrow':'.0-0' }} </em></p>
                             <p><b>Valor del amparo: </b><em> {{ seguro.get( 'valorAmparo' ).value | currency:'':'symbol-narrow':'.0-0' }} </em></p>
                         </div>
                     </mat-card-content>
@@ -56,88 +56,105 @@
                         </mat-card-header>
                         <mat-card-content style="text-align: left;" [formGroup]="seguro">
                             <div class="mt-2em" *ngIf="seguro.get( 'tieneSeguro' ).value === true">
-                                <p><b>Vigencia de la póliza: </b><em> {{ contratoPoliza.vigencia | date: 'dd/MM/yyyy' }} </em></p>
+                                <p><b>Vigencia de la póliza: </b><em> {{ seguro.get( 'seguroPoliza' ).value.vigencia | date: 'dd/MM/yyyy' }} </em></p>
                                 <div class="row">
                                     <div class="col-md-8">
                                         <div class="row">
                                             <div class="pr-1">
-                                                <label class="label-left" for="fechaSeguro" [ngClass]="{
-                                                      'color-secondaryColor':
-                                                        (seguro.get('fechaSeguro')?.invalid && seguro.get('fechaSeguro').touched) ||
-                                                        (seguro.get('fechaSeguro')?.invalid && estaEditando)
-                                                    }">Vigencia actualizada de la póliza</label>
+                                                <label class="label-left"
+                                                        for="fechaSeguro"
+                                                        [ngClass]="{'color-secondaryColor': (seguro.get('fechaSeguro')?.invalid && seguro.get('fechaSeguro').touched) || (seguro.get('fechaSeguro')?.invalid && estaEditando) }">
+                                                        Vigencia actualizada de la póliza
+                                                </label>
                                             </div>
                                             <div class="col d-flex align-items-center">
                                                 <mat-form-field class="example-full-width">
-                                                    <input matInput formControlName="fechaSeguro"
-                                                        [matDatepicker]="pickerFecha22" readonly (click)="pickerFecha22.open()" required
-                                                        placeholder="DD/MM/AAAA" />
+                                                    <input matInput
+                                                            formControlName="fechaSeguro"
+                                                            [matDatepicker]="pickerFecha22"
+                                                            [min]="minDate"
+                                                            readonly
+                                                            (click)="pickerFecha22.open()"
+                                                            required
+                                                            placeholder="DD/MM/AAAA" />
                                                     <mat-datepicker #pickerFecha22></mat-datepicker>
                                                 </mat-form-field>
-                                                <button mat-button color="primary" type="button" (click)="pickerFecha22.open()"
-                                                    class="btn-calendario">
-                                                    <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
+                                                <button mat-button
+                                                        color="primary"
+                                                        type="button"
+                                                        (click)="pickerFecha22.open()"
+                                                        class="btn-calendario">
+                                                        <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
                                                 </button>
                                             </div>
                                             <span class="icon-incompleto">
-                                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
-                                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
-                                                    matTooltip="Debe ingresar la información en el campo para continuar"
-                                                    matTooltipClass="info-tooltip" *ngIf="
-                                                      (seguro.get('fechaSeguro')?.invalid && seguro.get('fechaSeguro').touched) ||
-                                                      (seguro.get('fechaSeguro')?.invalid && estaEditando)
-                                                    " />
+                                                <img    class="icon-incompleto--img"
+                                                        src="assets/img/icon/incompleto.svg"
+                                                        alt="este campo es requerido"
+                                                        [matTooltipPosition]="'above'"
+                                                        matTooltip="Debe ingresar la información en el campo para continuar"
+                                                        matTooltipClass="info-tooltip"
+                                                        *ngIf="(seguro.get('fechaSeguro')?.invalid && seguro.get('fechaSeguro').touched) || (seguro.get('fechaSeguro')?.invalid && estaEditando)">
                                             </span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="mt-2em" *ngIf="seguro.get( 'tieneFechaAmparo' ).value === true">
-                                <p><b>Vigencia del amparo: </b><em> {{ contratoPoliza.vigenciaAmparo | date: 'dd/MM/yyyy' }} </em></p>
+                                <p><b>Vigencia del amparo: </b><em> {{ seguro.get( 'seguroPoliza' ).value.vigenciaAmparo | date: 'dd/MM/yyyy' }} </em></p>
                                 <div class="row">
                                     <div class="col-md-8">
                                         <div class="row">
                                             <div class="pr-1">
-                                                <label class="label-left" for="fechaAmparo" [ngClass]="{
-                                                      'color-secondaryColor':
-                                                        (seguro.get('fechaAmparo')?.invalid && seguro.get('fechaAmparo').touched) ||
-                                                        (seguro.get('fechaAmparo')?.invalid && estaEditando)
-                                                    }">Vigencia actualizada del amparo</label>
+                                                <label  class="label-left"
+                                                        for="fechaAmparo"
+                                                        [ngClass]="{ 'color-secondaryColor': (seguro.get('fechaAmparo')?.invalid && seguro.get('fechaAmparo').touched) || (seguro.get('fechaAmparo')?.invalid && estaEditando) }">
+                                                        Vigencia actualizada del amparo
+                                                </label>
                                             </div>
                                             <div class="col d-flex align-items-center">
                                                 <mat-form-field class="example-full-width">
-                                                    <input matInput formControlName="fechaAmparo"
-                                                        [matDatepicker]="pickerFecha221" readonly (click)="pickerFecha221.open()"
-                                                        required placeholder="DD/MM/AAAA" />
-                                                    <mat-datepicker #pickerFecha221></mat-datepicker>
+                                                    <input  matInput
+                                                            formControlName="fechaAmparo"
+                                                            [matDatepicker]="pickerFecha221"
+                                                            [min]="minDate"
+                                                            readonly
+                                                            (click)="pickerFecha221.open()"
+                                                            required
+                                                            placeholder="DD/MM/AAAA">
+                                                            <mat-datepicker #pickerFecha221></mat-datepicker>
                                                 </mat-form-field>
-                                                <button mat-button color="primary" type="button" (click)="pickerFecha221.open()"
-                                                    class="btn-calendario">
-                                                    <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
+                                                <button mat-button
+                                                        color="primary"
+                                                        type="button"
+                                                        (click)="pickerFecha221.open()"
+                                                        class="btn-calendario">
+                                                        <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
                                                 </button>
                                             </div>
                                             <span class="icon-incompleto">
-                                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
-                                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
-                                                    matTooltip="Debe ingresar la información en el campo para continuar"
-                                                    matTooltipClass="info-tooltip" *ngIf="
-                                                      (seguro.get('fechaAmparo')?.invalid && seguro.get('fechaAmparo').touched) ||
-                                                      (seguro.get('fechaAmparo')?.invalid && estaEditando)
-                                                    " />
+                                                <img    class="icon-incompleto--img"
+                                                        src="assets/img/icon/incompleto.svg"
+                                                        alt="este campo es requerido"
+                                                        [matTooltipPosition]="'above'"
+                                                        matTooltip="Debe ingresar la información en el campo para continuar"
+                                                        matTooltipClass="info-tooltip"
+                                                        *ngIf="(seguro.get('fechaAmparo')?.invalid && seguro.get('fechaAmparo').touched) || (seguro.get('fechaAmparo')?.invalid && estaEditando)">
                                             </span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="mt-2em" *ngIf="seguro.get( 'tieneValorAmparo' ).value === true">
-                                <p><b>Valor del amparo: </b><em> {{ contratoPoliza.valorAmparo | currency:'':'symbol-narrow':'.0-0' }} </em></p>
+                                <p><b>Valor del amparo: </b><em> {{ seguro.get( 'seguroPoliza' ).value.valorAmparo | currency:'':'symbol-narrow':'.0-0' }} </em></p>
                                 <div class="row">
                                     <div class="col-md-8">
                                         <div class="row">
                                             <div class="pr-1">
-                                                <label class="label-left" for="valorAmparo"
-                                                    [ngClass]="{ 'color-secondaryColor': seguro.get( 'valorAmparo' )?.invalid }">
-                                                    Valor actualizado del amparo
+                                                <label  class="label-left"
+                                                        for="valorAmparo"
+                                                        [ngClass]="{ 'color-secondaryColor': (seguro.get('fechaAmparo')?.invalid && seguro.get('fechaAmparo').touched) || (seguro.get('fechaAmparo')?.invalid && estaEditando) }">
+                                                        Valor actualizado del amparo
                                                 </label>
                                             </div>
                                             <div class="col d-flex">
@@ -153,13 +170,13 @@
                                                     {{ 20 - valorAmparo.value.length }}
                                                 </span>
                                                 <span class="icon-incompleto">
-                                                    <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
-                                                        alt="este campo es requerido" [matTooltipPosition]="'above'"
-                                                        matTooltip="Debe ingresar la información en el campo para continuar"
-                                                        matTooltipClass="info-tooltip" *ngIf="
-                                                        (seguro.get('valorAmparo')?.invalid && seguro.get('valorAmparo').touched) ||
-                                                        (seguro.get('valorAmparo')?.invalid && estaEditando)
-                                                      " />
+                                                    <img    class="icon-incompleto--img"
+                                                            src="assets/img/icon/incompleto.svg"
+                                                            alt="este campo es requerido"
+                                                            [matTooltipPosition]="'above'"
+                                                            matTooltip="Debe ingresar la información en el campo para continuar"
+                                                            matTooltipClass="info-tooltip"
+                                                            *ngIf="(seguro.get('valorAmparo')?.invalid && seguro.get('valorAmparo').touched) || (seguro.get('valorAmparo')?.invalid && estaEditando)">
                                                 </span>
                                             </div>
                                         </div>
@@ -182,16 +199,3 @@
         </form>
     </section>
 </ng-template>
-
-<!--
-<mat-accordion>
-    <mat-expansion-panel class="expansion-style sub-expansion">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title sin-diligenciar">
-                Seguro 2
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-        <app-vigencias-valor-rapg></app-vigencias-valor-rapg>
-    </mat-expansion-panel>
-</mat-accordion>
--->
