--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/razon-tipo-actualizacion-rapg/razon-tipo-actualizacion-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/razon-tipo-actualizacion-rapg/razon-tipo-actualizacion-rapg.component.html
@@ -71,6 +71,7 @@
                                     <input  matInput
                                             formControlName="fechaExpedicion"
                                             [matDatepicker]="pickerFecha22"
+                                            [min]="minDate"
                                             readonly
                                             (click)="pickerFecha22.open()"
                                             required
