--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-comentarios-acta/tabla-comentarios-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-comentarios-acta/tabla-comentarios-acta.component.html
@@ -34,9 +34,8 @@
 </p>
 <p class="d-flex">
   <b class="pr-05em">Observación:</b>
-  <span class="ml-1em">
+  <span class="ml-1em text-justify">
     {{ textoLimpioMessage( data[0].observacion ) }}
-    
   </span>
 </p>
 <p>
