--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/tabla-resultados/tabla-resultados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/tabla-resultados/tabla-resultados.component.html
@@ -34,8 +34,13 @@
             </ng-container>
 
             <ng-container matColumnDef="institucionEducativa">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 30%;"> Institución Educativa/ Sede </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Institución Educativa/ Sede </th>
                 <td mat-cell *matCellDef="let element"> {{element.institucionEducativa}}/ {{ element.sede }} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="numeroSolicitud">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de solicitud </th>
+                <td mat-cell *matCellDef="let element"> {{ element.numeroSolicitud }} </td>
             </ng-container>
 
             <ng-container matColumnDef="sede">
