Revert "unión temporal o Consorcio"
This reverts commit 82c7dcbf860bd314d00916a2f8a0f92465db4f26.

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-seleccionados/form-datos-proponentes-seleccionados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-seleccionados/form-datos-proponentes-seleccionados.component.html
@@ -911,7 +911,7 @@
                   (unionTemporalForm.get('cuantasEntidades').invalid && estaEditando)
                 "
               >
-                ¿Cuántas entidades integran la unión unión temporal o Consorcio?
+                ¿Cuántas entidades integran la unión temporal?
               </label>
             </div>
             <div class="col d-flex">
