unión temporal o Consorcio

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-seleccionados/form-datos-proponentes-seleccionados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-seleccionados/form-datos-proponentes-seleccionados.component.html
@@ -911,7 +911,7 @@
                   (unionTemporalForm.get('cuantasEntidades').invalid && estaEditando)
                 "
               >
-                ¿Cuántas entidades integran la unión temporal?
+                ¿Cuántas entidades integran la unión temporal o Consorcio?
               </label>
             </div>
             <div class="col d-flex">
