Fixes 4.1.1 y 4.21 De mi parte

--- a/asivamosffie.web/asivamosffie/src/app/_pages/cargar-enlace-sistema-monitoreo-linea/components/cargar-enlace-sistema-monitoreo-linea/cargar-enlace-sistema-monitoreo-linea.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/cargar-enlace-sistema-monitoreo-linea/components/cargar-enlace-sistema-monitoreo-linea/cargar-enlace-sistema-monitoreo-linea.component.html
@@ -13,7 +13,7 @@
         <button mat-icon-button (click)="verAyuda = false" class="text-info--close">
             <img src="assets/img/icon/cerrar-gris.svg" alt="cerrar ayuda">
         </button>
-        Bienvenida/o aquí podrá registrar la URL del sitio de internet donde se podrá monitorear el desarrollo de las obras, a través de las cámaras de
+        Bienvenida/o, aquí podrá registrar la URL del sitio de internet donde se podrá monitorear el desarrollo de las obras, a través de las cámaras de
         video en línea, para aquellos proyectos que tienen contemplado este esquema de seguimiento en sus contratos.
     </div>
     <app-acordion-tabla-lista-proyectos-cesml></app-acordion-tabla-lista-proyectos-cesml>
