ajuste seguimiento diario

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/tabla-registro-seguimiento-diario/tabla-registro-seguimiento-diario.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/tabla-registro-seguimiento-diario/tabla-registro-seguimiento-diario.component.html
@@ -85,7 +85,7 @@
                       type="button"
                       (click)="VerBitacora( element )"
                       [routerLink]="[ 'verBitacora', element.contratacionProyectoId ]"
-                      *ngIf="element.seguimientoDiarioId > 0">
+                      *ngIf="element.mostrarBitacora === true">
         Ver bitácora
         </a>
 
